Retoques finales al interfaz de usuario y lenguajes de la aplicacion

--- a/app/src/main/res/layout/activity_fatal_app_error.xml
+++ b/app/src/main/res/layout/activity_fatal_app_error.xml
@@ -9,7 +9,7 @@
 
     <TextView
         android:id="@+id/txt_error_msg"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
     <!--TODO: Foto de error en la que se muestre ¿Como has llegado hasta aqui?-->
