--- a/app/src/main/res/layout/content_go_shopping.xml
+++ b/app/src/main/res/layout/content_go_shopping.xml
@@ -18,7 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
-            android:text="Finish Shopping"
+            android:text="@string/finish_shopping"
             android:onClick="onClick"/>
 
         <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -41,14 +41,14 @@
                     android:layout_width="wrap_content"
                     android:layout_gravity="left"
                     android:text="@string/product"
-                    android:textAppearance="@style/AppFont.ListItemFont"/>
+                    android:textAppearance="@style/AppFont.TitleListFont"/>
 
                 <TextView
                     android:layout_height="wrap_content"
                     android:layout_width="wrap_content"
                     android:layout_gravity="center"
                     android:text="@string/amount"
-                    android:textAppearance="@style/AppFont.ListItemFont"/>
+                    android:textAppearance="@style/AppFont.TitleListFont"/>
 
             </GridLayout>
         </GridLayout>
