--- a/app/src/main/res/layout/dialog_two_buttons.xml
+++ b/app/src/main/res/layout/dialog_two_buttons.xml
@@ -2,41 +2,47 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="@dimen/fab_margin"
+    android:background="@drawable/wallpaper_dialog"
     android:orientation="vertical">
 
     <TextView
         android:id="@+id/txt_dialog_title"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="left"
-        android:textAppearance="@style/Theme.ShoppingList"
-        android:textSize="25dp"/>
+        android:layout_marginTop="@dimen/min_preferred_margin"
+        android:layout_marginLeft="@dimen/min_preferred_margin"
+        android:layout_marginRight="@dimen/min_preferred_margin"
+        android:textAppearance="@style/AppFont.TitleFont"/>
 
     <!-- Se elegirá de forma dinamica el contenido principal del Dialog -->
     <LinearLayout
         android:id="@+id/custom_dialog_content"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="@dimen/max_preferred_margin"
         android:orientation="vertical"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_margin="@dimen/max_preferred_margin">
 
         <android.widget.Button
             android:id="@+id/btnNegative"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginRight="5dp"/>
+            android:layout_weight="1"
+            android:layout_marginRight="@dimen/between_buttons_margin"/>
 
         <android.widget.Button
             android:id="@+id/btnAffirmative"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginRight="5dp"/>
+            android:layout_weight="1"
+            android:layout_marginLeft="@dimen/between_buttons_margin"/>
 
     </LinearLayout>
 </LinearLayout>
