--- a/app/src/main/res/layout/content_dialog_create_product.xml
+++ b/app/src/main/res/layout/content_dialog_create_product.xml
@@ -12,9 +12,9 @@
         android:layout_height="wrap_content"/>
 
     <EditText
-        android:id="@+id/input_target_amount"
+        android:id="@+id/input_amount"
         android:inputType="text"
-        android:hint="@string/target_amount"
+        android:hint="@string/amount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
