--- a/app/src/main/res/layout/content_shopping_list.xml
+++ b/app/src/main/res/layout/content_shopping_list.xml
@@ -36,7 +36,7 @@
 
         </LinearLayout>
 
-        <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        <GridLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -53,11 +53,11 @@
                 android:columnCount="2">
 
                 <TextView
-                    android:layout_height="wrap_content"
                     android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="left"
                     android:text="@string/product"
-                    android:textAppearance="@style/AppFont.TitleListFont"/>
+                    android:textAppearance="@style/AppFont.TitleListFont" />
 
                 <TextView
                     android:layout_height="wrap_content"
