--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -9,10 +9,11 @@
         android:orderInCategory="101"
         android:title="@string/delete_all_data"
         app:showAsAction="never" />
-    <item
+
+    <!--<item
         android:id="@+id/action_settings"
         android:orderInCategory="102"
         android:title="@string/action_settings"
-        app:showAsAction="never"/>
+        app:showAsAction="never"/>-->
 
 </menu>
